# lexandra

./: README.md  pyproject.toml
src/: example.py
src/pylexer/: __init__.py  lexer.py  token.py
src/pylexer/core/: lexer.py
src/pylexer/factory/: lexers.py
