[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylexer"
version = "1.0.0"
authors = [
  { name="Del Pino Agustín", email="dpinoagustin@gmail.com" },
]
description = "Create a lexer by decorators."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/agustin-del-pino/pylexer"
"Bug Tracker" = "https://github.com/agustin-del-pino/pylexer/issues"
